 * Icon Events are now setup at the end of icon setup to avoid issues with animations missing required anchors.
 * Fixed a rare issue caused by unused parentheses on condition settings with less than 3 conditions.

===v7.2.4===
 * New icon type: Unit Condition Icon.
 * Added Dialog as a possible sound channel.
 * The Icon Shown Time and Icon Hidden Time conditions are now deprecated in favor of using timer notification handlers.

====Bug Fixes====
 * Fixed an error that will happen when screen animations end.
 * Cooldown icons that aren't set to show when usable should once again fire an On Finish event.
 * Fixed ItemCache.lua:110 bad argument #1 to 'pairs' (table expected, got nil)
 * Fixed an issue that would break upgrades over locale-specific data.
 * Fixed colors of the backdrop for bar groups being wrong (green and blue were swapped).
 * The Eclipse condition should now be much more responsive.
 * Fixed: ClassSpellCache.lua line 281: Usage: GetClassInfo(ID)
 * Fixed several issues when using On Duration Changed notification triggers on controlled groups.
 
===v7.2.3===
 * The old Runes condition has been deprecated. In its place are 3 new conditions that should be much easier to use.
 * The Spell Cast Count condition has been deprecated. Its functionality can be replicated using the counter notification handler on a Combat Event icon.
 * Updated the Chi condition to support a max of 6.
 * You can now globally enable/disable global groups.
 * While Condition Set Passing-triggered animations now work on a priority system, with those notifications higher in the configuration list having priority over lower-ranked notifications if both are eligible to play at the same time. This also prevents situations where no animations will play even though one should be.
 * You can now customize the color of the backdrop for bar groups.

====Bug Fixes====